Fix GMP plugin deadlock

See https://github.com/cisco/openh264/issues/3007, a.k.a https://bugzilla.mozilla.org/show_bug.cgi?id=1397539 for more details